--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html> 
-    <head> </head>
+    <head> 
+        <link rel="stylesheet" href = "style.css" />
+    </head>
     <body>
-        <h1  
+        <img
+            src="https://hc-cdn.hel1.your-objectstorage.com/s/v3/59e43585b5c12463745a84c39f746bbc75646608_image.png"
+            width="410"
+            alt="ysws certificate"/>
+
+        <h1> Hackatime Ban Checker </h1>
+        <p>Do you think a user might be Hackatime banned? Use this to know fs. </p> 
+        <p> This is used by checking the Hackatime API :D </p>
+        <p> TS does not work rn, need to sleep  </p>
     </body>
 </html>
